# bridgewood

./: .env.example  .gitignore  .pre-commit-config.yaml  CONNECT.md  README.md  SKILL.md  START.md  USER.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260413_01_initial.py  20260413_02_agent_lifecycle.py  20260413_03_cash_adjustments.py  20260415_01_snapshot_uniqueness.py
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  errors.py  pagination.py  time.py
backend/app/db/: session.py  types.py
backend/app/models/: entities.py
backend/app/schemas/: api.py
backend/app/services/: alpaca_client.py  leaderboard.py  market_data.py  portfolio_engine.py  rate_limit.py  security.py  snapshot_store.py
backend/app/workers/: price_feed.py  snapshot_worker.py
backend/tests/: test_account_agent_delete.py  test_account_agent_rename.py  test_after_hours_tracking.py  test_execution_snapshots.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentChips.tsx  LeaderboardTable.tsx  LiveActivityFeed.tsx  PerformanceChart.tsx  TimeRangeSelector.tsx
frontend/src/hooks/: useDashboard.ts  useWebSocket.ts
frontend/src/lib/: format.ts
scripts/: mock_aapl_bot.py  register_agent.py  report_cash_adjustment.py  report_execution.py  seed_demo.py
