[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgewood"
version = "0.1.0"
description = "Bridgewood agent trading leaderboard backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.13",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.43",
  "uvicorn[standard]==0.35.0",
  "websockets==15.0.1"
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy==1.15.0",
  "pre-commit>=4.2.0",
  "ruff>=0.11.2"
]

[tool.black]
target-version = ["py312"]
extend-exclude = """
/(
  \\.venv
  | build
  | dist
  | frontend
)/
"""

[tool.mypy]
python_version = "3.12"
pretty = true
ignore_missing_imports = true
mypy_path = "backend"
files = ["backend", "scripts"]
exclude = "(^frontend/|^dist/|^build/)"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "frontend"
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.typos.default.extend-identifiers]
"PnL" = "PnL"

[tool.typos.default.extend-words]
"PnL" = "PnL"
